--- a/src/main/webapp/Welcome.html
+++ b/src/main/webapp/Welcome.html
@@ -77,8 +77,7 @@
         }
 
         footer {
-            background-color: #333;
-            color: #fff;
+            color: #777;
             text-align: center;
             padding: 20px;
         }
